deploy/k8s/overlays/dev/fluvio-ui-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluvio-ui
spec:
  template:
    spec:
      containers:
        - name: fluvio-ui
          imagePullPolicy: IfNotPresent
