deploy/k8s/overlays/dev/upload-worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-worker
spec:
  replicas: 1
